--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 */Intermediate
 */Saved
 *_BuiltData.uasset
+*/UrbanMaterialPack
+*/ProceduralNaturePack
+*/FPS_Weapon_Bundle
 
 
 ######################
